# CatEars

./: .gitignore  Makefile.am  README.md  configure.ac  default_rules.mk
doc/: convert_model.md  debug.md
src/: am.cc  am.h  bli_x86_asm_macros.h  ce_stt.cc  ce_stt.h  cmvn.cc  cmvn.h  config.h.in  configuration.h  decodable.cc  decodable.h  decoder.cc  decoder.h  fbank.cc  fbank.h  fst.cc  fst.h  gemm.cc  gemm.h  gemm_haswell.cc  gemm_penryn.cc  hashtable.h  lm_fst.cc  lm_fst.h  main.cc  matrix.cc  matrix.h  nnet.cc  nnet.h  pasco.cc  pasco.h  pcm_reader.cc  pcm_reader.h  pocketkaldi.cc  pocketkaldi.h  pool.h  srfft.cc  srfft.h  status.h  strlcpy.cc  (+6 more)
test/: cmvn_test.cc  fbank_test.cc  fst_test.cc  gemm_test.cc  lm_fst_test.cc  nnet_test.cc  srfft_test.cc  symbol_table_test.cc
test/data/: G.pfst  build_lm.sh  lm.train.txt  lm.words.txt
tool/: compute-cer.sh  compute_fbank.cc  conv_chartok.sh  convert_am.py  convert_fstfmt.py  convert_trans.py  convert_unigram.py  convert_words.py  mkgraph_hcl.sh  prune_lm.py
